# sneparse

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
scripts/: aplpy_test.py  build_catalog_db.py  catalog_builder.py  check_files.py  check_paths.py  compare_epochs.py  compare_unfiltered_epochs.py  cross_match.py  csv_catalog.py  db_catalog.py  group_driver.sh  image_driver.sh  imager.py  make_images.py  piechart.py  plot_groups.py  prepare_categories.py  qTNSm.sh  query_pairs.py  sort_images.py  sorter.py  visualize_categories.py
sneparse/: __init__.py  catalog.py  coordinates.py  definitions.py  imaging.py  record.py  util.py
sneparse/db/: models.py  tables.py  util.py
sneparse/tests/: test_coordinate_conversion.py  test_coordinates.py  test_record.py
tests/: test_coordinates.py  test_record.py
